--- a/Behandelingen.html
+++ b/Behandelingen.html
@@ -41,9 +41,11 @@
     
     
     <aside class="cookies-message">
-        Deze website gebruikt cookies om de gebruikerservaring te verbeteren. 
+        <fieldset>
+        <legend>Deze website gebruikt cookies om de gebruikerservaring te verbeteren. </legend>
         <a href="#">Meer informatie</a>
         <button id="accept-cookies">Akkoord</button>
+        </fieldset>
     </aside>
     <!-- Soorten behandelingen-->
      <section class="soorten-behandelingen">
