--- a/contactpagina.html
+++ b/contactpagina.html
@@ -68,9 +68,11 @@
 
     <!--Meestal vragen-->
     <aside class="cookies-message">
-        Deze website gebruikt cookies om de gebruikerservaring te verbeteren. 
+        <fieldset>
+        <legend>Deze website gebruikt cookies om de gebruikerservaring te verbeteren. </legend>
         <a href="#">Meer informatie</a>
         <button id="accept-cookies">Akkoord</button>
+        </fieldset>
     </aside>
     <h3 class="title">Veelgestelde Vragen</h3>
 
@@ -90,7 +92,7 @@
             <p class="faq-answer">Geen zorgen, ons team staat voor je klaar om je te adviseren. Vul het contactformulier in of bel ons, en we helpen je graag met het kiezen van de juiste behandeling.</p>
         </article>
 
-        <p class="last-one">"Heb je een specifieke vraag of wil je direct een afspraak maken? Vul het contactformulier in en we nemen zo snel mogelijk contact met je op!</p>
+        <p class="last-one">"Heb je een specifieke vraag of wil je direct een afspraak maken? Vul het contactformulier in en we nemen zo snel mogelijk contact met je op!.</p>
     </main> <!-- Close main element -->
 
     <!-- Footer -->
