--- a/index.html
+++ b/index.html
@@ -43,9 +43,11 @@
     </header>
     <!-- Importance of Skincare Section -->
     <aside class="cookies-message">
-        Deze website gebruikt cookies om de gebruikerservaring te verbeteren. 
+        <fieldset>
+        <legend>Deze website gebruikt cookies om de gebruikerservaring te verbeteren. </legend>
         <a href="#">Meer informatie</a>
         <button id="accept-cookies">Akkoord</button>
+        </fieldset>
     </aside>
     <section class="skincare-importance">
         <h2>Belang van Huidverzorging</h2>
@@ -95,6 +97,11 @@
         Onze producten zijn vrij van parabenen en sulfaten en zijn cruelty-free. 
         Ontdek het verschil met onze huidverzorging en geef je huid de liefde die het nodig heeft.
     </p>
+    <ul class="nothing">
+        <li>Tip 1: Gebruik een reiniger</li>
+        <li>Tip 2: Hydrateer je huid</li>
+        <li>Tip 3: Bescherm met zonnebrand</li>
+    </ul>
 </section>
     <!-- Footer -->
     <footer id="company_footer">
