--- a/Huidproblemen.html
+++ b/Huidproblemen.html
@@ -38,9 +38,11 @@
 
     <!-- Section verschillendehoud -->
     <aside class="cookies-message">
-        Deze website gebruikt cookies om de gebruikerservaring te verbeteren. 
+        <fieldset>
+        <legend>Deze website gebruikt cookies om de gebruikerservaring te verbeteren. </legend>
         <a href="#">Meer informatie</a>
         <button id="accept-cookies">Akkoord</button>
+        </fieldset>
     </aside>
     <section class="huid-block">
         <h2 class="huid-title">Acne en Onzuiverheden</h2>
