--- a/Huidverzorgingproducten.html
+++ b/Huidverzorgingproducten.html
@@ -71,9 +71,11 @@
     </header>
     <!--- Why us?(section) -->
     <aside class="cookies-message">
-        Deze website gebruikt cookies om de gebruikerservaring te verbeteren. 
+        <fieldset>
+        <legend>Deze website gebruikt cookies om de gebruikerservaring te verbeteren. </legend>
         <a href="#">Meer informatie</a>
         <button id="accept-cookies">Akkoord</button>
+        </fieldset>
     </aside>
     <section class="why-us">
         <h2><strong>Waarom Kiezen voor Onze Producten?</strong></h2>
@@ -109,6 +111,10 @@
                 <td>$25</td>
             </tr>
         </table>
+        <ul>
+            <li>Milde Gezichtsreiniger: "Voor een zachte en dagelijkse reiniging."</li>
+            <li>Diep Reinigende Gel: "Voor een vette of gemengde huid."</li>
+        </ul>
     </section>
     <!-- Footer -->
     <footer id="company_footer">
